add custom 20% column width

--- a/SingularityUI/app/templates/status.hbs
+++ b/SingularityUI/app/templates/status.hbs
@@ -111,7 +111,7 @@
                 <h2>Tasks</h2>
             </div>
             <div class="row">
-                <div class="col-md-2">
+                <div class="col-md-2 col-md-1-5">
                     <a class="big-number-link" href="{{appRoot}}/tasks">
                         <div class="well">
                             <div class="big-number">
@@ -121,7 +121,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 col-md-1-5">
                     <a class="big-number-link" href="{{appRoot}}/tasks/scheduled">
                         <div class="well">
                             <div class="big-number">
@@ -131,7 +131,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 col-md-1-5">
                     <a class="big-number-link" href="{{appRoot}}/tasks/scheduled">
                         <div class="well">
                             <div class="big-number">
@@ -141,7 +141,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 col-md-1-5">
                     <a class="big-number-link" href="{{appRoot}}/tasks/cleaning">
                         <div class="well">
                             <div class="big-number">
@@ -151,7 +151,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 col-md-1-5">
                     <a class="big-number-link" href="{{appRoot}}/tasks/lbcleanup">
                         <div class="well">
                             <div class="big-number">
