add request and task totals to chart

--- a/SingularityUI/app/styles/colors.styl
+++ b/SingularityUI/app/styles/colors.styl
@@ -1,5 +1,7 @@
 $linkBlue = #08c
 
+$base-bg = #fff
+$base-text = #333
 $beige = #f3efe0
 $grey = #444444
 $grey-light = #ededed
@@ -14,4 +16,3 @@ $purple = #b93c96
 $dark-yellow = #e6e65c
 
 $removeRed = #df6f6f
-
