--- a/SingularityUI/app/styles/lists.styl
+++ b/SingularityUI/app/styles/lists.styl
@@ -40,12 +40,12 @@
             display block
             padding 10px 15px
             &:hover
-                background $grey-xtra-light
                 text-decoration none
                     
             &.inactive-link
                 &:hover
                     background: inherit
+                    color: $base-text
                     &:after
                         content ''
                 
