remove boxed section styles

--- a/SingularityUI/app/styles/charts.styl
+++ b/SingularityUI/app/styles/charts.styl
@@ -17,7 +17,6 @@
     vertical-align middle
     margin-right 5px
     
-
 .chart-fill-active
     background $green
     
@@ -45,3 +44,9 @@
 
 .chart-fill-blank
     background: $base-bg
+
+.chart__legend-link
+    &:hover
+        text-decoration none
+        .chart__label
+            text-decoration underline
