--- a/SingularityUI/app/styles/lists.styl
+++ b/SingularityUI/app/styles/lists.styl
@@ -1,34 +1,16 @@
 @import colors
 
+.link-list
+    padding 0
+    ul, li
+        list-style none
+
 // Simple Lists
 .list-plain
     list-style none
-    padding-left 15px
+    padding-left 0
     li
         margin-bottom 5px
-
-// List of text in a panel
-.panel--list
-    .panel-title
-        font-size 24px
-    .panel-heading
-        a
-            text-decoration none
-    .list-group
-        margin-bottom 0
-    .panel-body
-        padding 0
-        margin-bottom 0
-    .list-group-item
-        padding 10px 15px
-        border none
-        border-top 1px solid #dadada
-        font-size 15px
-        .badge
-            margin-right 10px
-            float left
-        &:first-child
-            border-top none
 
 // List of links in a panel
 .list-group--links
@@ -39,9 +21,7 @@
         a
             display block
             padding 10px 15px
-            &:hover
-                text-decoration none
-                    
+            
             &.inactive-link
                 &:hover
                     background: inherit
@@ -57,7 +37,7 @@
     .list-group-item
         border: none
         a, li
-            padding: 5px 15px
+            padding: 5px 0
 
 .inactive-link
     color $grey
